Added texture mapping

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Source/Windows/Arduboy3D/.vs/
 Source/Windows/AssetGen/Debug/
 Source/Windows/Arduboy3D/x64/
 Source/Windows/Arduboy3D/Debug/
+Source/Windows/Catacombs/.vs/
+Source/Windows/Catacombs/Debug/
+Source/Windows/LUTgen/x64/Debug/
