Added more textures and started adding sound support

--- a/Source/Catacombs/project.json
+++ b/Source/Catacombs/project.json
@@ -483,6 +483,9 @@
 		},
 		"\\Catacombs.eeprom": {
 			"sdcard": false
+		},
+		"\\Generated\\AudioData.inc.h": {
+			"sdcard": false
 		}
 	},
 	"ideVersion": 10000,
