Added new sounds and menus

--- a/Source/Windows/AssetGen/AssetGen.vcxproj
+++ b/Source/Windows/AssetGen/AssetGen.vcxproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Catacombs\lodepng.h" />
+    <ClInclude Include="OriginalSounds.inc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
